2003-07-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* providers/Makefile.am:
	* providers/default/*:
	* providers/xml/*: renamed default provider to XML.

2003-07-03  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.90.0

2003-06-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-value.[ch]: keep alphabetical sort.

	* libgda/gda-connection.h: added GDA_CONNECTION_OPTIONS_DONT_SHARE
	connection option.

	* libgda/gda-client.c: added more documentation.
	(gda_client_open_connection): if GDA_CONNECTION_OPTIONS_DONT_SHARE is
	specified in the connection options, don't reuse connections.

	* doc/C/tmpl/gda-client.sgml:
	* doc/C/tmpl/gda-command.sgml:
	* doc/C/tmpl/gda-config.sgml:
	* doc/C/tmpl/gda-connection.sgml: added more documentation.

2003-06-13  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS.

2003-06-12  Adam Williams <adam@morrison-ind.com>

	* libgda.spec.in: added missing stanzas for MDB and LDAP packages.

2003-06-10  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2003-06-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/libgda-docs.sgml:
	* doc/C/tmpl/gda-report-*.sgml: added missing libgda-report files.

2003-06-08  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.12.1

2003-06-03  David T Hollis <dhollis@davehollis.com>

	* libgda.spec.in: fixed normal and build requirements.

2003-06-03  Steve Fosdick  <gnomedb@pelvoux.demon.co.uk>

	* Oracle Provider - fixed a statement handle leak which caused
	Oracle to run out of cursors.

2003-05-28  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.12.0

2003-05-28  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-parameter.[ch] (gda_parameter_new_boolean):
	(gda_parameter_new_double): new functions.

	* configure.in: upped version numbers.

2003-05-13  Xabier Rodríguez Calvar <xrcalvar@igalia.com>
