@@ -1,5 +1,10 @@
 2003-07-04  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* libgda/gda-batch.[ch]:
+	* libgda/libgda.h: removed GdaBatch class from library.
+
+2003-07-04  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	* configure.in:
 	* providers/Makefile.am:
 	* providers/default/*:
